--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <td width="300" align="right" valign="top">
 
               <a href="http://www.anime.or.jp">
-                <img src="./assets/homepage/contact.png" width="150" alt="联系我们" title="此处文案待补充" hspace="8">
+                <img src="./assets/homepage/contact.png" width="150" alt="联系我们" title="左瀛动漫（日本）：动画制作会 社爱酷拉" hspace="8">
               </a>
             </td>
           </tr>
@@ -223,6 +223,10 @@
                       </li>
                   </ul>
                 </div>
+            </div>
+            <div class="other-logo">
+              <a target="_blank" href="https://www.zhihu.com/people/zuo-ying-dong-man-she-ji-you-xian-gong-si/activities"><img height="130" width="242" src="./assets/homepage/zhihu.jpg" alt=""></a>
+              <a target="_blank" href="http://v.douyin.com/RGkoFJ/  "><img height="130" width="242" src="./assets/homepage/douyin.jpg" alt=""></a>
             </div>
 
           </td>
