--- a/info/index.html
+++ b/info/index.html
@@ -67,7 +67,7 @@
                         <td width="300" align="right" valign="top">
 
                             <a href="http://www.anime.or.jp">
-                                <img src="../assets/homepage/contact.png" width="150" alt="联系我们" title="此处文案待补充" hspace="8">
+                                <img src="../assets/homepage/contact.png" width="150" alt="联系我们" title="左瀛动漫（日本）：动画制作会 社爱酷拉" hspace="8">
                             </a>
                         </td>
                     </tr>
