--- a/katudou/index.html
+++ b/katudou/index.html
@@ -99,17 +99,11 @@
                 </a>
 
                 <!-- tab4 -->
-                <a class="works" href="javascript:void(0)">
-                <div style="width: 118px; height: 26px;display: inline-block;">
-                    <span style="font-size: 23px;font-weight: 600;">作品简介</span>
-                </div>
+                <a href="../works/works.html">
+                    <div style="width: 120px; height: 27px;display: inline-block;">
+                        <span style="font-size: 23px;font-weight: 600;">作品介绍</span>
+                    </div>
                 </a>
-                <div id="box" class="hidden-box hidden-loc-us">
-                    <ul>
-                        <a href="../works/illu.html"><li>插画</li></a>
-                        <a href="../works/anime.html"><li>动画</li></a>
-                    </ul>
-                </div>
 
                 <!-- tab4 -->
                 <a href="../saiyou.html">
