--- a/works/anime.html
+++ b/works/anime.html
@@ -168,9 +168,9 @@ $(
         </a>
 
         <!-- tab4 -->
-        <a class="works" href="javascript:void(0)">
-          <div style="width: 118px; height: 26px;display: inline-block;">
-            <span style="font-size: 23px;font-weight: 600;">作品简介</span>
+        <a href="../works/works.html">
+          <div style="width: 120px; height: 27px;display: inline-block;">
+              <span style="font-size: 23px;font-weight: 600;">作品介绍</span>
           </div>
         </a>
         <!-- tab5 -->
@@ -181,13 +181,6 @@ $(
         </a>
       </center>
     </div>
-    <div id="box" class="hidden-box hidden-loc-us">
-                    <ul>
-                        <a href="../works/illu.html"><li>插画</li></a>
-                        <a href="../works/anime.html"><li>动画</li></a>
-                    </ul>
-                </div>
-
 
     <table width="850" border="0" cellspacing="10">
       <tbody>
