--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </div>
           <ul class="foot_links">
             <li class="copyright_zh">
-              <a target="_blank" href="#">天津左瀛动漫设计有限公司 版权所有</a></li>
+              <a target="_blank" href="#">天津天津左瀛动漫设计有限公司 版权所有</a></li>
             <li class="copyright_public">
               <span class="span_line">电话：18222177796(中国)</span>
               <span class="f_line">|</span>
