--- a/works/works.html
+++ b/works/works.html
@@ -154,7 +154,7 @@
             </center>
         </div>
         <div style="margin-top:20px;text-align: center;">
-          <span class="gallery-title">插画作品：</span>
+          <a href="../works/illu.html"><span class="gallery-title">插画作品：</span></a>
           <div id="gallery-container" style="display: inline-block;vertical-align: middle;text-align: left;width: 565px;">
             <ul class="items--small" style="width: 750px;">
             </ul>
@@ -164,7 +164,7 @@
           <a href="../works/illu.html" style="display: inline-block;vertical-align: middle;font-size: 20px;">更多</a>
         </div>
         <div style="margin-top:20px;text-align: center;">
-          <span class="gallery-title">动画作品：</span>
+          <a href="../works/anime.html"><span class="gallery-title">动画作品：</span></a>
           <div id="gallery-container-photo" style="display: inline-block;vertical-align: middle;text-align: left;width: 565px;">
             <ul class="items--small-photo" style="width: 750px;">
             </ul>
@@ -187,7 +187,7 @@
             </div>
             <ul class="foot_links">
               <li class="copyright_zh">
-                <a target="_blank" href="#">左瀛动漫设计有限公司 版权所有</a></li>
+                <a target="_blank" href="#">天津左瀛动漫设计有限公司 版权所有</a></li>
               <li class="copyright_public">
                 <span class="span_line">电话：18222177796(中国)</span>
                 <span class="f_line">|</span>
